Refactor TableConfig to record pattern and fix OrderSpec validation